Infinite loop when calculating deep counts of directories
Steps to reproduce
if i select all files in my home directory and let nautilus compute the contents size, it cycles itself in a range and never provides the final value that i expect
- go to your home directory
- make sure hidden files are displayed
- select all and click properties
Reproducible in:
-
Flatpak unstable -
Other:
Current behavior
the contents field is never computed - the value in the contents field oscillates within a range, both number of items and the totaling value
Expected behavior
there's a final value of the contents field within acceptable amount of time
Additional information
Reproducer: http://taijimen.dredwerkz.cz/bz1566027.tar.xz
Edited by Ghost User